@@ -6,6 +6,7 @@ New features:
 - News Document have a flexible part to handle multiple links
 - Added an input to enter comments when modifying a document and sending the
   comments to the event service.
+- Added the PressRelease document type.
 Bug fixes:
 ~~~~~~~~~~
 - fix #454: Invalid widget css class in edition. This css class was hardcoded in
